; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMRTCGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMRTCGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PRCMRTCGet(i64* %0, i16* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i16*, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i16* %1, i16** %4, align 8
  store i64 0, i64* %5, align 8
  %6 = call i64 (...) @IS_RTC_USED()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = call i32 (...) @RTC_U32SECS_REG_RD()
  %10 = call i32 (...) @RTC_U32MSEC_REG_RD()
  %11 = call i64 @RTC_U64MSEC_MK(i32 %9, i32 %10)
  store i64 %11, i64* %5, align 8
  %12 = call i64 (...) @SCC_U64MSEC_GET()
  %13 = load i64, i64* %5, align 8
  %14 = add i64 %13, %12
  store i64 %14, i64* %5, align 8
  br label %15

15:                                               ; preds = %8, %2
  %16 = load i64, i64* %5, align 8
  %17 = call i64 @RTC_SECS_IN_U64MSEC(i64 %16)
  %18 = load i64*, i64** %3, align 8
  store i64 %17, i64* %18, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call zeroext i16 @RTC_MSEC_IN_U64MSEC(i64 %19)
  %21 = load i16*, i16** %4, align 8
  store i16 %20, i16* %21, align 2
  ret void
}

declare dso_local i64 @IS_RTC_USED(...) #1

declare dso_local i64 @RTC_U64MSEC_MK(i32, i32) #1

declare dso_local i32 @RTC_U32SECS_REG_RD(...) #1

declare dso_local i32 @RTC_U32MSEC_REG_RD(...) #1

declare dso_local i64 @SCC_U64MSEC_GET(...) #1

declare dso_local i64 @RTC_SECS_IN_U64MSEC(i64) #1

declare dso_local zeroext i16 @RTC_MSEC_IN_U64MSEC(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
